[package]
name = "echonet2mqtt"
version = "0.1.0"
edition = "2024"
authors = ["Tim Hurman <kanwhoa@gmail.com>"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = ["default", "net"] }
rand = "0.10.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
